<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_label"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:text="@string/app_desc" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mqtt_prompt" />

        <EditText
            android:id="@+id/brokerUriText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="textUri"
            android:text="@string/sample_mqtt_address"
            />

        <TextView
            android:id="@+id/brokerPortText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_port_of_mqtt_broker" />

        <EditText
            android:id="@+id/brokerPortEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="textUri"
            android:text="@string/_1883"
            />

        <Button
            android:id="@+id/mqtt_connect_btn"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

    </LinearLayout>
</ScrollView>
