<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectedToMQTT"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/detail_station_updated"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/detail_data_updated" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/connectedWeatherStations" />

    <com.atakmap.android.gui.PluginSpinner
        android:id="@+id/behaviour_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/weatherStations"
        android:prompt="@string/station_prompt" />

    <Button
        android:id="@+id/mqtt_connect_btn"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:text="@string/disconnect" />
</LinearLayout>